syntax = "proto3";

package image_processing;

service BlurService {
    rpc BlurImage (ImageRequest) returns (ImageResponse);
}

message ImageRequest {
    bytes image_data = 1;
}

message ImageResponse {
    bytes image_data = 1;
}
